--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -11,7 +11,7 @@ body{
 }
 
 header{
-    background-image: linear-gradient(-90deg, #061161, #780206);
+    background-image: linear-gradient(-90deg,#780206, #061161);
     position: fixed;
     left: 0px;
     top: 0px;
@@ -49,6 +49,18 @@ header ul li a:hover{
     color: white;
 }
 
+header .menu{
+    display: none;
+}
+
+header .close{
+    display: none;
+}
+
+header .navbar{
+    display: none;
+}
+
 .intro{
     background-color: #061161;
     width: 60%;
@@ -65,7 +77,7 @@ header ul li a:hover{
     line-height: 1.5;
 }
 section button{
-    background-color: #600518;
+    background-image: linear-gradient(-90deg, #061161, #780206);
     border: none;
     padding: 15px 20px;
     border-radius: 5px;
@@ -96,6 +108,90 @@ section button{
     height: 100%;
 }
 
+/*Media queries*/
+@media(max-width: 768px){
+    .container{
+        width: 90%;
+        margin: auto;
+    }
+    .intro{
+        width: 100%;
+        position: absolute;
+        z-index: 0;
+
+    }
+    .right-side{
+        display: none;
+    }
+    header .menu{
+        display: block;
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        right: 20px;
+        top: 17px; 
+    }
+
+    header .menu img{
+        width: 100%;
+        height: 100%
+    }
+
+    header nav ul li{
+        display: none;
+    }
+
+    .navbar {
+        display: block;
+        background:#061161;
+        width: 45%;
+        height: 100%;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        box-shadow: 0px 0px 8px 2px #061161;
+       transform: translateX(100%);
+        -webkit-transform: translateX(100%);
+        -webkit-transition: transform 0.6s ease;
+        transition: transform 0.5s ease;
+        
+    }
+
+    .admin-nav-side{
+        display: block;
+        margin-top: 20px;
+        color: #fff;
+        font-size: 21px;
+    }
+
+    .navbar ul{
+        margin-top: 60px;
+        margin-left: 20px;
+    }
+    .navbar a{
+        text-decoration: none;
+    }
+
+    .close{
+        display: block;
+        margin: 10px;
+        font-size: 25px;
+        right: 0;
+        top: 0;
+        cursor: pointer;
+        position: fixed;
+        border: 1px solid #fff;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 10px;
+        padding-bottom: 5px;
+        color: white
+        
+    }
+
+}
 
 
 
