--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -45,14 +45,17 @@ header ul li{
 
 header ul li a{
     text-decoration: none;
-    color: white;
+    color: #d2cece;
     font-size: 18px;
     text-transform: uppercase;
     font-weight: bold;
 }
 
 header ul li a:hover{
-    color: #d2cece;
+    color: white;
+}
+.active{
+    color: white
 }
 
 header .menu{
@@ -65,6 +68,23 @@ header .menu{
 
 .navbar{
     display: none;
+}
+
+.avatar{
+    position: absolute;
+    top: 10px;
+    right: 66px;
+    width: 50px;
+    height: 50px;
+}
+.avatar img{
+    width: 100%;
+    height: 100%;
+}
+
+header #pro{
+    margin-right: 60px;
+    font-size: 14px;
 }
 
 .intro{
@@ -183,7 +203,7 @@ section button:hover{
     color: #061161;
     margin-bottom: 7px;
     outline: none;
-    border: none;
+    border: 1px solid grey;
     background-color: transparent
    }  
 
@@ -265,6 +285,9 @@ table th, table td {
     border-bottom: 1px solid #ddd;
     text-align: center;
 }
+table{
+    margin-left: 20px;
+}
 
 /*Profile page*/
 .profile {
@@ -290,6 +313,59 @@ table th, table td {
     margin-bottom: 20px
 }
 
+/*Admin page*/
+.table-users{
+    width: 90%;
+    margin-top: 10px;
+    z-index: 0;
+    margin-left: 60px;
+    box-shadow: 0 5px 15px #262fadad;
+    padding-bottom: 20px;
+}
+
+#view-users{
+    margin-left: 10px;
+}
+#operation{
+    font-size: 12px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: inline;
+    background: #061161;
+}
+
+#operationd{
+    font-size: 12px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: inline;
+    background: #262fadad;
+}
+#operationd:hover{
+    font-weight: normal;
+}
+
+#operation:hover{
+    font-weight: normal;
+}
+
+.view a{
+    display: block;
+    text-decoration: none;
+    color: white;
+}
+
+.view{
+    cursor: pointer;
+}
+.view:hover{
+    background:#262fadad;
+}
+
+.trashEmail{
+    width: 20px;
+    -webkit-filter: invert(100%);
+}
 
 
 /*Media queries*/
@@ -324,6 +400,10 @@ table th, table td {
     }
 
     header nav ul li{
+        display: none;
+    }
+
+    .avatar{
         display: none;
     }
 
@@ -420,6 +500,8 @@ table th, table td {
         text-align: center;
         width: 95%;
     }
+
+    
 
 
 }
