[Feature #164971453]Allow staff to view all users accounts

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -364,9 +364,13 @@ table{
 
 .trashEmail{
     width: 20px;
-    -webkit-filter: invert(100%);
 }
 
+/*Staff page*/
+
+#staff-users{
+    margin-left: 70px;
+}
 
 /*Media queries*/
 @media(max-width: 768px){
