[Feature #164972102]Allow staff to credit or debit

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -505,6 +505,18 @@ table{
         width: 95%;
     }
 
+    /*Admin page*/
+    .table-users{
+        width: 100%;
+        margin-top: 5px;
+        z-index: 0;
+        margin-left: 2px;
+        overflow: auto;
+    }
+    
+    #staff-users{
+        margin-left: 0;
+    }
     
 
 
