--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -271,10 +271,10 @@ section button:hover{
 /*History transctions page*/
 /*Styling the table*/
 .table-responsive{
-    width: 76%;
+    width: 35%;
     margin-top: 10px;
     z-index: 0;
-    margin-left: 140px;
+    margin-left: 400px;
     box-shadow: 0 5px 15px #1f0e4d;
     padding-bottom: 20px;
 }
@@ -319,21 +319,21 @@ table{
 
 /*Admin page*/
 .table-users{
-    width: 77%;
+    width: 38%;
     margin-top: 10px;
     z-index: 0;
-    margin-left: 143px;
+    margin-left: 350px;
     box-shadow: 0 5px 15px #ccc;
     padding-bottom: 20px;
 }
 
 .table-transactions{
-    width: 78%;
+    width: 39%;
     margin-top: 10px;
     z-index: 0;
-    margin-left: 140px;
+    margin-left: 350px;
     box-shadow: 0 5px 15px #ccc;
-    padding-bottom: 20px
+    padding-bottom: 20px;
 }
 
 #view-users{
@@ -360,14 +360,73 @@ table{
     background:rgb(245, 241, 241);
 }
 
-.trashEmail{
-    width: 20px;
+#trashEmail{
+    width: 25px;
 }
 
 /*Staff page*/
 
 #staff-users{
     margin-left: 20px;
+}
+
+/* The Popup*/
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  /* Popup container */
+  .popup-content {
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    color: #020202;
+    border: 1px solid #888;
+    border-radius: 6px;
+    width: 30%; 
+  }
+  
+  /* The Close popup Button */
+  .closePopup {
+    color: rgb(10, 10, 10);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .closePopup:hover,
+  .closePopup:focus {
+    color: rgba(201, 6, 6, 0.986);
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  #popupBtn{
+      padding: 5px 28px;
+      font-size: 12px;
+      border-radius: 2px;
+      background: #c5070f;
+  }
+
+  #popupBtnok{
+    padding: 5px 25px;
+    font-size: 12px;
+    border-radius: 2px;
+    background: #091160;
+}
+.transa{
+    border-bottom: none;
+    color: white;
+    text-align: left;
+    padding-right: 60px;
 }
 
 /*Media queries*/
@@ -537,6 +596,16 @@ table{
     #staff-users{
         margin-left: 0;
     }
+
+    /* The Popup*/
+.popup {
+    top: 50px;
+  }
+  
+  /* Popup container */
+  .popup-content {
+    width: 70%; 
+  }
     
 
 
